--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.info{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 90%;
+  margin: 0 auto;
+  padding-bottom: 50px;
+  background: rgba(80, 78, 78, 0.623);
+  padding: 70px;
   color: white;
+  font-size: 25px;
+  text-align: center;
+  font-family: 'Courier New', Courier, monospace;
+  align-items: flex-end;
 }
-
-.App-link {
-  color: #61dafb;
+.card{
+  flex: 0 1 24%;
+  
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card__img{
+  width: 100%;
+}
+.card button{
+  width: 100%;
+  height: 40px;
+  border-radius: 5px solid ;
+  font-size: 20px;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 800;
+  background: -webkit-linear-gradient(rgb(120, 194, 2), rgb(184, 83, 0));
 }
